# not-an-engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindGLFW3.cmake
include/: App.hpp  Device.hpp  GlfwApi.hpp  Graphic.hpp  Window.hpp  util.hpp
include/core/: App.hpp  Camera.hpp  Component.hpp  Device.hpp  Entity.hpp  GlfwApi.hpp  GraphicContext.hpp  GraphicInstance.hpp  PhysicalDevice.hpp  Scene.hpp  Surface.hpp  Swapchain.hpp  Time.hpp  Window.hpp  util.hpp
include/graphic/: Buffer.hpp  CommandBuffer.hpp  Descriptor.hpp  Device.hpp  FrameBuffer.hpp  Graphic.hpp  Image.hpp  Instance.hpp  PhysicalDevice.hpp  Pipeline.hpp  RenderPass.hpp  Shader.hpp  Surface.hpp  SwapChain.hpp  SwapChainData.hpp  Texture.hpp
include/renderer/: Buffer.hpp  CommandBuffer.hpp  Descriptor.hpp  Image.hpp  Pipeline.hpp  RenderPass.hpp  Renderer.hpp  Shader.hpp  Texture.hpp
include/sample/: BasicScene.hpp  FreeCamera.hpp  FreeCameraController.hpp
include/scene/: BasicScene.hpp  Behaviour.hpp  Camera.hpp  Component.hpp  Entity.hpp  EntityManager.hpp  FreeCamera.hpp  FreeCameraController.hpp  Material.hpp  Mesh.hpp  Model.hpp  Scene.hpp  SolidColorMaterial.hpp  Texture.hpp  TextureMaterial.hpp  Transform.hpp
include/util/: vulkan.hpp
resource/shader/: CMakeLists.txt  TextureMaterial.frag  TextureMaterial.vert
shader/: CMakeLists.txt  shader.frag  shader.vert
src/: App.cpp  CMakeLists.txt  Device.cpp  GlfwApi.cpp  Graphic.cpp  Window.cpp  main.cpp
src/core/: App.cpp  Camera.cpp  Device.cpp  Entity.cpp  GlfwApi.cpp  GraphicContext.cpp  GraphicInstance.cpp  PhysicalDevice.cpp  Scene.cpp  Surface.cpp  Swapchain.cpp  Window.cpp
src/graphic/: Buffer.cpp  CommandBuffer.cpp  Descriptor.cpp  Device.cpp  FrameBuffer.cpp  Graphic.cpp  Image.cpp  Instance.cpp  PhysicalDevice.cpp  Pipeline.cpp  RenderPass.cpp  Shader.cpp  Surface.cpp  SwapChain.cpp  SwapChainData.cpp  Texture.cpp
src/renderer/: Buffer.cpp  CommandBuffer.cpp  Descriptor.cpp  Image.cpp  Pipeline.cpp  RenderPass.cpp  Renderer.cpp  Shader.cpp  Texture.cpp
src/sample/: BasicScene.cpp  FreeCamera.cpp  FreeCameraController.cpp  main.cpp
src/scene/: BasicScene.cpp  Camera.cpp  Entity.cpp  EntityManager.cpp  FreeCamera.cpp  FreeCameraController.cpp  Mesh.cpp  Model.cpp  Scene.cpp  SolidColorMaterial.cpp  Texture.cpp  TextureMaterial.cpp  Transform.cpp
src/util/: vulkan.cpp
